--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE HTML>
 <!--
-	Prologue by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Based on Prologue by HTML5 UP --- i'm leaving this in, just citing my sources :)
 -->
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>Justin Strikowski</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,8 +19,8 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Jane Doe</h1>
-							<p>Hyperspace Engineer</p>
+							<h1 id="title">Justin Strikowski</h1>
+							<p>Software Engineer</p>
 						</div>
 
 					<!-- Nav -->
